--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div class="card-body p-4">
               <h4 class="card-title text-primary mb-4"><i class="fas fa-address-book me-2"></i>Contact Information</h4>
               <div class="mb-4">
-                <p class="mb-3"><i class="fas fa-phone text-primary me-3"></i><strong>+91 7024560895</strong></p>
+                <p class="mb-3"><i class="fas fa-phone text-primary me-3"></i><a href="tel:+917024560895" class="text-decoration-none"><strong>+91 7024560895</strong></a></p>
                 <p class="mb-3"><i class="fas fa-envelope text-primary me-3"></i><a href="https://mail.google.com/mail/?view=cm&to=swapnilmishrak2230@gmail.com" target="_blank" class="text-decoration-none">swapnilmishrak2230@gmail.com</a></p>
                 <p class="mb-4"><i class="fas fa-map-marker-alt text-primary me-3"></i>Hyderabad, Telangana, India</p>
               </div>
@@ -361,20 +361,22 @@
     </div>
   </footer>
 
-  <!-- Bootstrap Modal for Form Messages -->
-  <div class="modal fade" id="message-modal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="messageModalLabel">Message</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <!-- Bootstrap Toast for Form Messages -->
+  <div class="toast-container position-fixed top-0 end-0 p-3">
+    <div id="success-toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          <i class="fas fa-check-circle me-2"></i>Thank you for your message! I will get back to you soon.
         </div>
-        <div class="modal-body">
-          <div id="modal-message"></div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+    <div id="error-toast" class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          <i class="fas fa-exclamation-triangle me-2"></i>Failed to send the message. Please try again or contact me directly at swapnilmishrak2230@gmail.com.
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
     </div>
   </div>
